[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Art/bat.png" type="Texture" id=1]
[ext_resource path="res://Scripts/bat_follower.gd" type="Script" id=2]
[ext_resource path="res://Assets/Art/3rd Job/Soul Seeker (Hit) (5).png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/3rd Job/Soul Seeker (Hit) (6).png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/3rd Job/Soul Seeker (Hit) (4).png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2000, 0, 200, 200 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 48, 16.5 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="bat_follower" type="KinematicBody2D"]
scale = Vector2( 0.959998, 0.709727 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 12 )
frame = 6
speed_scale = 3.0
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -5.20834, 8.45396 )
scale = Vector2( 0.439918, 0.66667 )
polygon = PoolVector2Array( -77, 42, -19, 24, 1, 21, 38, 38, 42, 15, 2, 9, -5, 1, -17, 1, -24, 9, -64, 24 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -14, 22.5 )
shape = SubResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.037

[node name="BulletTimer" type="Timer" parent="."]

[node name="HurtAnimation" type="AnimatedSprite" parent="."]
position = Vector2( -14.5416, 4.63272 )
scale = Vector2( 0.872999, 1.04877 )
frames = SubResource( 14 )

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_Hurtbox_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="animation_finished" from="HurtAnimation" to="." method="_on_HurtAnimation_animation_finished"]
